Version 0.7.1:
	- Corrected plot_paleomag_interval bug.

Version 0.7 (19/09/2019):
	- Created user manual and linked to it from inside the app.

Version 0.6.1 (01/12/2017):
	- Corrected bug with None type and "Export to file".

Version 0.6 (09/09/2017):
	- User can now compare visually two LOCs.
	- Created a LOC manager where the user can set the current LOC or delete a loaded LOC.
	- Users can now add a new LOC from the database as well as from a file (therefore users can see the differences between various revisions).
	- Simplified 'Welcome' window.
	- Brought back Pat's code that allowed to go back to a previous LOC. On top of it, it now correctly shows the name of the LOC in the metadata when switching from one to another.

Version 0.5 (06/09/2017):
	- Modified (and simplified) the database query to retrieve events: now even events for which we do not have a calibration are retrieved (thus allowing the user to project them on the LOC and estimate their age).
	- Corrected the bug happening with List Biostratigraphic events when no age conversion was done (hence no "original age" was set).
	- Corrected the tiny bug preventing to project the events on the LOC.
	- Data of unknown age are no longer projected at age 9999Ma but their age is really set to None. This required a few modifications from the code (fix_null for instance) but also from the SQL queries.
	- Corrected weird bug happening when an event in neptune_event has sample_top but no top_sample_depth and its core didn't exist in neptune_core (!) thus generating a None value that needs to be caught for depth as well.
	- Modified handling of plot codes in user provided strat files: if the plot code is not recognized as a top (starts with T), bottom (starts with B) or a zone (starts with Z), it does not return an error anymore but plot the datum in filled color, with no indication of its type.